# CookieJar

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.build.yml  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  release-please-config.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-publish-main.yml  docker-publish.yml  e2e.yml  release-please.yml
backend/: Dockerfile  cache.py  data.py  data_transactions.py  entrypoint.sh  main.py
backend/routers/: business.py  cash_flow.py  categories.py  investments.py  manual_transactions.py  overview.py  settings.py  transactions.py  travel.py
db/: schema.sql
docs/: ARCHITECTURE.md  TESTING.md  data_model.md  spec.md
e2e/: auth.setup.ts  manual-transactions-import.spec.ts  manual-transactions-xlsx-import.spec.ts  overview.spec.ts  package-lock.json  package.json  playwright.config.ts
frontend/: .env.local  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: auth.config.ts  (+2 more)
scripts/: bootstrap_dbmate.py  generate_e2e_fixtures.py  run_migrations.py  seed_dev_db.py
src/: constants.py  settings.py
tests/: conftest.py  test_business_router.py  test_calculations.py  test_cash_flow_derivation.py  test_cash_flow_router.py  test_categories_router.py  test_investments_router.py  test_manual_transactions_bulk.py  test_net_worth_over_time.py  test_overview_router.py  test_settings_router.py  test_transactions_dashboard.py  test_travel_router.py
(+67 files in other folders)
