[project]
name = "family-money-tracker"
version = "0.5.4"
description = "Family finance dashboard built with Next.js and FastAPI"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ipdb>=0.13.13",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a real PostgreSQL instance (set TEST_DATABASE_URL).",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
